--- a/.github/workflows/openblank.yml
+++ b/.github/workflows/openblank.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/checkout@v3
         with: 
           ssh-key: ${{  secrets.action  }}
+          token: ${{  secrets.PERSONAL_TOKEN  }}
           repository: UsersHeli/ituse
           path: ./github/workflows/Nodes.yaml
       # # Runs a single command using the runners shell
