--- a/.github/workflows/openblank.yml
+++ b/.github/workflows/openblank.yml
@@ -15,28 +15,40 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    name: test
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  my-job:
+    name: Max job
+    rules-on: ubuntu-latest
+    steps: 
+    - uses: actions/checkout@v3
+      with:
+        token: ${{  secrets.PERSONAL_TOKEN  }}
+        submodule: true
+        ssh-key: ${{  secrets.action  }}
+        repository: UsersHeli/ituse
+        path: ./github/workflows/Nodes.yaml
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: run node
-        uses: actions/checkout@v3
-        with: 
-          ssh-key: ${{  secrets.action  }}
-          token: ${{  secrets.PERSONAL_TOKEN  }}
-          repository: UsersHeli/ituse
-          path: ./github/workflows/Nodes.yaml
-      # # Runs a single command using the runners shell
-      # - name: Run a one-line script
-      #   run: echo Hello, world!
+  # # This workflow contains a single job called "build"
+  # build:
+  #   name: test
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-latest
 
-      # # Runs a set of commands using the runners shell
-      # - name: Run a multi-line script
-      #   run: |
-      #     echo Add other actions to build,
-      #     echo test, and deploy your project.
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - name: run node
+  #       uses: actions/checkout@v3
+  #       with: 
+  #         ssh-key: ${{  secrets.action  }}
+  #         token: ${{  secrets.PERSONAL_TOKEN  }}
+  #         repository: UsersHeli/ituse
+  #         path: ./github/workflows/Nodes.yaml
+  #     # # Runs a single command using the runners shell
+  #     # - name: Run a one-line script
+  #     #   run: echo Hello, world!
+
+  #     # # Runs a set of commands using the runners shell
+  #     # - name: Run a multi-line script
+  #     #   run: |
+  #     #     echo Add other actions to build,
+  #     #     echo test, and deploy your project.
