--- a/.github/workflows/openblank.yml
+++ b/.github/workflows/openblank.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   my-job:
     name: Max job
-    rules-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps: 
     - uses: actions/checkout@v3
       with:
