--- a/.github/workflows/openblank.yml
+++ b/.github/workflows/openblank.yml
@@ -19,17 +19,26 @@ jobs:
     name: Max job
     runs-on: ubuntu-latest
     steps: 
-    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v3   #Node.js环境
+      with:
+        node-version: '16.x'    
+    - uses: actions/setup-python@v4 #python环境
+      with:
+        python-version: '3.x'       #python 3.x
+        cache: 'pip'    
+    - name: Timezone #UTC+0 → UTC+8
+      run: sudo timedatectl set-timezone 'Asia/Shanghai'
+    - uses: actions/checkout@v3
       with:
         token: ${{ secrets.test }}
         submodules: 'true'
         ssh-key: ${{  secrets.action  }}
         repository: UsersHeli/ituse
         path: ituse
-    - name: print
-      run: echo `ls ituse`
     - name: get workdir
-      run: echo `pwd`/ituse
+      run:  |
+         echo `pwd`/ituse
+         cd ituse && sh workflow.sh `pwd`/ituse
 
   # # This workflow contains a single job called "build"
   # build:
