--- a/.github/workflows/openblank.yml
+++ b/.github/workflows/openblank.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/setup-python@v4 #python环境
       with:
         python-version: '3.x'       #python 3.x
-        cache: 'pip'    
+        # cache: 'pip'    
     - name: Timezone #UTC+0 → UTC+8
       run: sudo timedatectl set-timezone 'Asia/Shanghai'
     - uses: actions/checkout@v3
