--- a/.github/workflows/speed.yml
+++ b/.github/workflows/speed.yml
@@ -10,6 +10,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+  schedule:
+    - cron: '00 */2 * * *'
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -32,9 +35,12 @@ jobs:
         ssh-key: ${{  secrets.action  }}
         repository: UsersHeli/speed
         path: speed
-    - name: get workdir
+    - name: chech dir
       run:  |
          echo `pwd`/speed
+         echo `ls ./speed`
+    -name: run
+      run: |
          cd speed && sh workflow.sh `pwd`
 
 
