--- a/.github/workflows/speed.yml
+++ b/.github/workflows/speed.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: action
+name: URL2
 
 # Controls when the workflow will run
 on:
