--- a/.github/workflows/openblank.yml
+++ b/.github/workflows/openblank.yml
@@ -48,11 +48,11 @@ jobs:
          git pull origin main
          git add ./url1.yaml
          git commit -m "$(date '+%Y-%m-%d %H:%M:%S')更新"
-        
-    - name: Push
-      uses:  ad-m/github-push-action@master
-      with:
-        branch: main
+         git push origin main
+    # - name: Push
+    #   uses:  ad-m/github-push-action@master
+    #   with:
+    #     branch: main
 
 
 
