--- a/.github/workflows/openblank.yml
+++ b/.github/workflows/openblank.yml
@@ -41,11 +41,12 @@ jobs:
         path: test
     - name: cp
       run: |
-         cp ./ituse/Clash.yaml ./test/url1.yaml
+        #  cp ./ituse/Clash.yaml ./test/url1.yaml
          cd ./test
          git config --local user.email "actions@github.com"
          git config --local user.name "GitHub Actions"
          git pull origin main
+         cp ../ituse/Clash.yaml ./url1.yaml
          git add ./url1.yaml
          git commit -m "$(date '+%Y-%m-%d %H:%M:%S')更新"
          git push origin main
