--- a/.github/workflows/speed.yml
+++ b/.github/workflows/speed.yml
@@ -42,11 +42,11 @@ jobs:
         path: test
     - name: cp
       run: |
-         cp ./speed/Eternity.yaml ./test/url2.yaml
          cd ./test
          git config --local user.email "actions@github.com"
          git config --local user.name "GitHub Actions"
          git pull origin main
+         cp ../speed/Eternity.yaml ./url2.yaml
          git add ./url2.yaml
          git commit -m "$(date '+%Y-%m-%d %H:%M:%S')更新"
          git push origin main
